make sure ABC_USE_STDINT_H is fallback if ABC_USE_NAMESPACE is not set
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,11 +150,15 @@ endif()
 if(ABC_USE_NAMESPACE)
     message(STATUS "Compiling in namespace ${ABC_USE_NAMESPACE}")
     target_compile_definitions(abc_interface INTERFACE "ABC_NAMESPACE=${ABC_USE_NAMESPACE}")
+else()
+    set(ABC_USE_STDINT_H 1)
 endif()
 
 include(CheckTypeSize)
 check_type_size("(void*)0" SIZEOF_VOID_P)
+
 if(ABC_USE_STDINT_H)
+    message(STATUS "Setting ABC_USE_STDINT_H ${ABC_USE_STDINT_H}")
     target_compile_definitions(abc_interface INTERFACE "ABC_USE_STDINT_H=1")
 else()
     check_type_size("(long)0" SIZEOF_LONG)
