cleanup tox env flags and cmds
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@ skipsdist = true
 
 [base]
 setenv =
-    {abc,tests}: CFLAGS=-march=native -O2 -g -DNDEBUG
-    {abc,tests}: CXXFLAGS={env:CFLAGS:-march=native -O2 -g -DNDEBUG}
-    {abc,tests}: LDFLAGS={env:CFLAGS:-march=native -O2 -g -DNDEBUG}
+    {abc,tests}: CFLAGS=-O2 -g -DNDEBUG
+    {abc,tests}: CXXFLAGS={env:CFLAGS:-O2 -g -DNDEBUG}
+    {abc,tests}: LDFLAGS={env:CFLAGS:-O2 -g -DNDEBUG}
     {build}: PREFIX={env:PREFIX:./install}
 
 passenv =
@@ -37,8 +37,8 @@ passenv =
 
 whitelist_externals =
     {abc,tests,lint,build,clang,ctest,grind,unbuild}: bash
-    {abc,tests,clean,lint,grind}: make
-    {build,clang,cover}: mkdir
+    {abc,tests,clean}: make
+    {build,clang}: mkdir
 
 changedir =
     {build,clang}: build
@@ -46,8 +46,8 @@ changedir =
 deps =
     {abc,tests,lint,build,clang,ctest,grind}: pip>=21.3
     {abc,tests}: this-cli
-    {build,clang,ctest}: cmake
-    {build,clang,ctest}: ninja
+    {build,clang,ctest,grind}: cmake
+    {build,clang,ctest,grind}: ninja
     lint: cpplint
     grind: ValgrindCI
 
@@ -55,18 +55,19 @@ commands_pre =
     {build,clang}: mkdir -p {toxinidir}/build
 
 commands =
-    abc: make -j4 ABC_USE_PIC=1 {posargs:'ABC_USE_NAMESPACE=xxx'} abc
-    tests: make -j4 ABC_USE_PIC=1 {posargs:'ABC_USE_NAMESPACE=xxx'} test
+    abc: make -j4 ABC_USE_NO_CUDD=1 ABC_USE_PIC=1 {posargs:'ABC_USE_NAMESPACE=xxx'} abc
+    tests: make -j4 ABC_USE_NO_CUDD=1 ABC_USE_PIC=1 {posargs:'ABC_USE_NAMESPACE=xxx'} test
     clang: bash -c 'cmake -G {posargs:"Unix Makefiles"} -DABC_USE_NAMESPACE=xxx -DCMAKE_TOOLCHAIN_FILE=../tools/clang_toolchain.cmake ..'
     build: bash -c 'cmake -G {posargs:"Unix Makefiles"} -DABC_USE_NAMESPACE=xxx -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=$PREFIX ..'
-    grind: bash -c 'cmake -DABC_USE_NAMESPACE=xxx -DCMAKE_BUILD_TYPE=Debug ..'
-    {build,clang,grind}: bash -c 'cmake --build . --target abc -j $(nproc)'
-    {build,clang,grind}: bash -c 'ctest -V --test-dir ./'
+    {build,clang}: bash -c 'cmake --build . --target abc -j $(nproc)'
+    {build,clang}: bash -c 'ctest -V --test-dir ./'
     build: cmake --build . --target install
     ctest: bash -c 'ctest -j $(nproc) --build-generator {posargs:"Ninja"} --build-and-test . build --build-options -DABC_USE_NAMESPACE=xxx -DCMAKE_BUILD_TYPE=Debug --test-command ctest --rerun-failed --output-on-failure -V'
     lint: bash -c 'cpplint --output=gsed {toxinidir}/src/base/main/* {toxinidir}/lib/*'
-    grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=demo_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./demo i10.aig || true'
-    grind: valgrind-ci demo_check.xml --number-of-errors
-    grind: valgrind-ci demo_check.xml --summary
-    unbuild: bash -c 'rm -rf build/'
+    grind: bash -c 'cmake -G {posargs:"Ninja"} -S . -B build -DABC_USE_NAMESPACE=xxx -DCMAKE_BUILD_TYPE=Debug'
+    grind: bash -c 'cmake --build build --target abc -j $(nproc)'
+    grind: bash -c 'valgrind --tool=memcheck --xml=yes --xml-file=abc_check.xml --leak-check=full --show-leak-kinds=definite,possible --error-exitcode=127 ./build/src/base/main/abc "-c" "r i10.aig; b; ps; b; rw -l; rw -lz; b; rw -lz; b; ps; cec"'
+    grind: valgrind-ci abc_check.xml --number-of-errors
+    grind: valgrind-ci abc_check.xml --summary
+    unbuild: bash -c 'rm -rf build/ abc_check.xml'
     clean: make clean
