chg: add result.blif to makefile clean and cleanup tox file
* switch up matrix cfg, use makefile on bionic

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,12 +49,12 @@ jobs:
             os: ubuntu-18.04
             compiler: gcc
             version: "9"
-            toxcmd: build
+            toxcmd: abc,tests
 
           - name: macOS-10.15-gcc
             os: macOS-10.15
             compiler: gcc
-            version: "10"
+            version: "11"
             toxcmd: ctest
 
           - name: macOS-10.15-clang
