new: add windows/msys CI build matrix - test CMAKE_THREAD_LIBS_INIT
Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -260,7 +260,7 @@ if(NOT ABC_USE_NO_PTHREADS)
         set(THREADS_PREFER_PTHREAD_FLAG ON)
         find_package(Threads REQUIRED)
         target_link_libraries(abc_interface
-            INTERFACE Threads::Threads
+            INTERFACE ${CMAKE_THREAD_LIBS_INIT}
         )
     endif()
 endif()
