chg: check for win first, win/mingw definitions inside if(msys or mingw)
* fix missing leading __ on mingw32__

Signed-off-by: Stephen L Arnold <nerdboy@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,9 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     )
 endif()
 if(WIN32)
-    add_definitions(-DWIN32 -D__MINGW32__)
+    if(MINGW OR MSYS)
+        add_definitions(-DWIN32 -D__MINGW32__)
+    endif()
     target_compile_definitions(abc_interface
         INTERFACE
             $<$<BOOL:${BUILD_SHARED_LIBS}>:ABC_DLL=ABC_DLLEXPORT>
@@ -165,10 +167,10 @@ if(ABC_USE_STDINT_H)
 else()
     check_type_size("(long)0" SIZEOF_LONG)
     check_type_size("(int)0" SIZEOF_INT)
-    if(UNIX OR APPLE)
-        set(ARCH_PREFIX "LIN")
-    elseif(WIN32)
+    if(WIN32 OR MINGW OR MSYS)
         set(ARCH_PREFIX "NT")
+    elseif(UNIX OR APPLE)
+        set(ARCH_PREFIX "LIN")
     else()
         message(FATAL_ERROR "Unknown arch")
     endif()
