--- a/tox.ini
+++ b/tox.ini
@@ -36,7 +36,7 @@ passenv =
     {[base]passenv}
 
 whitelist_externals =
-    {abc,tests,lint,build,clang,ctest,grind,unbuild}: bash
+    {abc,tests,lint,build,clang,ctest,grind,unbuild,ctestwin}: bash
     {abc,tests,clean}: make
     {build,clang}: mkdir
 
@@ -44,10 +44,10 @@ changedir =
     {build,clang}: build
 
 deps =
-    {abc,tests,lint,build,clang,ctest,grind}: pip>=21.3
+    {abc,tests,lint,build,clang,ctest,grind,ctestwin}: pip>=21.3
     {abc,tests}: this-cli
-    {build,clang,ctest,grind}: cmake
-    {build,clang,ctest,grind}: ninja
+    {build,clang,ctest,grind,ctestwin}: cmake
+    {build,clang,ctest,grind,ctestwin}: ninja
     lint: cpplint
     grind: ValgrindCI
 
@@ -57,12 +57,16 @@ commands_pre =
 commands =
     abc: make -j4 ABC_USE_PIC=1 {posargs:'ABC_USE_NAMESPACE=xxx'} abc
     tests: make -j4 ABC_USE_PIC=1 {posargs:'ABC_USE_NAMESPACE=xxx'} test
-    clang: bash -c 'cmake -G {posargs:"Unix Makefiles"} -DABC_USE_NAMESPACE=xxx -DCMAKE_TOOLCHAIN_FILE=../tools/clang_toolchain.cmake ..'
-    build: bash -c 'cmake -G {posargs:"Unix Makefiles"} ABC_USE_PIC=1 -DABC_USE_NAMESPACE=xxx -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=$PREFIX ..'
+    {abc,tests}: bash -c 'ls -lh *abc* demo || true'
+    clang: bash -c 'cmake -G {posargs:"Unix Makefiles"} -DABC_USE_NAMESPACE=xxx -DBUILD_SHARED_LIBS=ON -DCMAKE_TOOLCHAIN_FILE=../tools/clang_toolchain.cmake ..'
+    build: bash -c 'cmake -G {posargs:"Unix Makefiles"} -DABC_USE_NAMESPACE=xxx -DBUILD_SHARED_LIBS=ON -DCMAKE_INSTALL_PREFIX=$PREFIX ..'
     {build,clang}: bash -c 'cmake --build . -j $(nproc)'
     {build,clang}: bash -c 'ctest -V --test-dir ./'
     build: cmake --build . --target install
+    build: bash -c 'find install/ -type f -name \*abc\* -o -name demo | xargs ls -lh'
     ctest: bash -c 'ctest -j $(nproc) --build-generator {posargs:"Ninja"} --build-and-test . build --build-options -DABC_USE_NAMESPACE=xxx -DABC_SKIP_EXE=ON -DCMAKE_BUILD_TYPE=Debug --test-command ctest --rerun-failed --output-on-failure -V'
+    ctestwin: ctest --build-generator {posargs:"Visual Studio 16 2019"} --build-and-test . build --build-options -DABC_USE_NAMESPACE=xxx -DABC_USE_NO_READLINE=ON -DCMAKE_BUILD_TYPE=Release --test-command ctest --rerun-failed --output-on-failure -V
+    ctest: bash -c 'ls -lh build/*abc* build/demo'
     lint: bash -c 'cpplint --output=gsed {toxinidir}/src/base/main/* {toxinidir}/lib/*'
     grind: bash -c 'cmake -G {posargs:"Ninja"} -S . -B build -DCMAKE_BUILD_TYPE=Debug'
     grind: bash -c 'cmake --build build --target abc -j $(nproc)'
